--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "tsc": "tsc",
     "postinstall": "cd web && yarn",
     "prestart": "yarn build && cd web && yarn build",
-    "build": "yarn clean && tsc && yarn copy-files",
+    "build": "yarn clean && yarn tsc && yarn copy-files",
     "clean": "rm -rf ./dist",
     "copy-files": "cp ./src/public/*.* ./dist/",
     "watch": "tsc -w",
