--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "tsc": "tsc",
-    "postinstall": "tsc && cd web && yarn",
-    "prestart": "yarn build && cd web && yarn build",
+    "postinstall": "cd web && yarn && yarn build",
     "build": "yarn clean && tsc && yarn copy-files",
     "clean": "rm -rf ./dist",
     "copy-files": "cp ./src/public/*.* ./dist/",
